--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comme:wght@100..900&family=Dela+Gothic+One&display=swap" rel="stylesheet">
     <title>MNT</title>
 </head>
 <body>
@@ -22,8 +26,28 @@
                 And Beyond!</h1>
             <p class="intro__bottom">scroll down <span>↓</span></p>
         </div>
-
     </header>
+    <!-- 2. Hero Section -->
+    <main class="hero">
+        <section class="hero__card">
+            <div class="hero__left__card">
+                <p class="intro__up">A HIKING GUIDE</p>
+                <h1 class="intro__middle">
+                    Be Prepared <br>
+                    For The Mountians <br>
+                    And Beyond!</h1>
+                <p class="intro__text">Determining what level of hiker you are can be an important tool when planning future hikes.
+                     This hiking level guide will help you plan hikes according to different hike ratings set by various websites like
+                      All Trails and Modern Hiker. What type of hiker are you - novice, moderate, advanced moderate, expert, or expert backpacker? </p>
+                <p class="intro__bottom">scroll down <span>↓</span></p>
+            </div>
+            <div class="hero__right__card">
+                <img src="images/home1.jpg" alt="home3" class="right__image">
+            </div>
+        </section>
+        <section class="hero__card"></section>
+        <section class="hero__card"></section>
+    </main>
     
 
 
