Main paig without js is done

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <!-- 1.Header Section -->
     <header>
         <nav class="bar">
-            <div class="bar__elelement">Gallery</div>
-            <div class="bar__elelement">Contact</div>
-            <div class="bar__elelement">Home</div>
+            <ul>
+                <a class="bar__elelement" href="gallery.html">Gallery</a>
+                <a class="bar__elelement" href="contact.html">Contact</a>
+                <a class="bar__elelement" href="index.html">Home</a>
+            </ul>
         </nav>
         <div class="intro">
             <p class="intro__up">A HIKING GUIDE</p>
@@ -29,30 +31,62 @@
     </header>
     <!-- 2. Hero Section -->
     <main class="hero">
-        <section class="hero__card">
+        <section class="hero__card first__card">
             <div class="hero__left__card">
-                <p class="intro__up">A HIKING GUIDE</p>
+                <p class="intro__up">GET STARTED</p>
                 <h1 class="intro__middle">
                     Be Prepared <br>
                     For The Mountians <br>
-                    And Beyond!</h1>
-                <p class="intro__text">Determining what level of hiker you are can be an important tool when planning future hikes.
-                     This hiking level guide will help you plan hikes according to different hike ratings set by various websites like
-                      All Trails and Modern Hiker. What type of hiker are you - novice, moderate, advanced moderate, expert, or expert backpacker? </p>
-                <p class="intro__bottom">scroll down <span>↓</span></p>
+                    And Beyond!
+                </h1>
+                <p class="intro__text">
+                    Determining what level of hiker you are can be an important tool when planning future hikes.
+                    This hiking level guide will help you plan hikes according to different hike ratings set by various websites like
+                    All Trails and Modern Hiker. What type of hiker are you - novice, moderate, advanced moderate, expert, or expert backpacker? </p>
+                <p class="intro__bottom">read more <span>→</span></p>
             </div>
             <div class="hero__right__card">
-                <img src="images/home1.jpg" alt="home3" class="right__image">
+                <img src="images/home1.jpg" alt="home1" class="right__image">
             </div>
         </section>
-        <section class="hero__card"></section>
-        <section class="hero__card"></section>
+        <section class="hero__card second__card">
+            <div class="hero__left__card">
+                <p class="intro__up">HIKING ESSENTIALS</p>
+                <h1 class="intro__middle">
+                    Picking the <br>right Hiking <br>Gear!
+                </h1>
+                <p class="intro__text">
+                    The nice thing about beginning hiking is that you don't really
+                    need any special gear, you can probably get away with things you already have.
+                    Let's start with clothing. A typical mistake hiking beginners make is wearing jeans and 
+                    regular clothes, which will get heavy and chafe wif they get sweaty or wet.</p>
+                <p class="intro__bottom">read more <span>→</span></p>
+            </div>
+            <div class="hero__right__card">
+                <img src="images/home2.jpg" alt="home2" class="right__image">
+            </div>
+        </section>
+        <section class="hero__card third__card">
+            <div class="hero__left__card">
+                <p class="intro__up">WHERE YOU GO IS THE KEY</p>
+                <h1 class="intro__middle">
+                    Understand <br> Your Map & <br>Timing
+                </h1>
+                <p class="intro__text">To start, print out the hiking guide and map. 
+                    If it's raining, throw them in a Zip-Lock bag.
+                    Read over the guide, study the map, and have a good idea of what to expect.
+                    I like to know what my next landmark is as I hike.
+                    For example, I'll read the guide and know that say, in a mile, I make a right turn at the junction..</p>
+                <p class="intro__bottom">read more <span>→</span></p>
+            </div>
+            <div class="hero__right__card">
+                <img src="images/home3.jpg" alt="home3" class="right__image">
+            </div>
+        </section>
     </main>
-    
-
-
-
-
+    <footer>
+        <h3 class="footer">Ilya Paliashchuk</h3>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
