Gallery page is done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comme:wght@100..900&family=Dela+Gothic+One&display=swap" rel="stylesheet">
     <title>MNT</title>
 </head>
-<body>
+<body class="home">
     <!-- 1.Header Section -->
     <header>
         <nav class="bar">
