CSS and HTML are done

--- a/index.html
+++ b/index.html
@@ -84,8 +84,30 @@
             </div>
         </section>
     </main>
-    <footer>
-        <h3 class="footer">Ilya Paliashchuk</h3>
+      <footer>
+        <div class="footer__contacts" aria-label="contact information">
+            <address>
+                <p class="footer__name">Ilya Paliashchuk</p>
+                <p class="footer__links">
+                    <a href="https://instagram.com/ttypsoo" target="_blank" rel="noopener">
+                        Instagram
+                        <img src="icons/inst.svg" alt="Inst" width="12">
+                    </a> 
+                    <a href="https://www.facebook.com/share/1CpFPfueDb/?mibextid=wwXIfr" target="_blank" rel="noopener">
+                        Facebook
+                        <img src="icons/face.svg" alt="face" width="12">
+                    </a>
+                </p>
+                <p class="footer__contact">
+                    <a href="mailto:info@example.com">ilya.paliashchuk@gmail.com</a> 
+                    <a href="tel:+1234567890">+48 234 567 890</a>
+                </p>
+                <p class="footer__address">
+                    Cracow<br>
+                    Bydruka, 2
+                </p>
+            </address>
+        </div>
     </footer>
     <script src="index.js"></script>
 </body>
